fix: add relative position wrapper for misaligned image placeholder (#1119)

--- a/packages/components/src/components/Image/Image.css
+++ b/packages/components/src/components/Image/Image.css
@@ -1,9 +1,16 @@
 @import url('../variables.css');
 
+div.cf-placeholder-wrapper {
+  /* Required for the absolute positioned icon to render in the center */
+  position: relative;
+}
+
 img.cf-placeholder-image {
   background-color: var(--cf-color-gray100);
   outline-offset: -2px;
   outline: 2px solid rgba(var(--cf-color-gray400-rgb), 0.5);
+  width: 100%;
+  height: 100%;
 }
 
 svg.cf-placeholder-icon {
